Add machine translation

--- a/l10n/po/ja_JP/_guides/continuous-testing.adoc.po
+++ b/l10n/po/ja_JP/_guides/continuous-testing.adoc.po
@@ -302,19 +302,21 @@ msgstr "Dev UIはdevモードで提供されているため、継続的テスト
 
 #. type: Title ==
 #: upstream/_guides/continuous-testing.adoc:153
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Multi Module Projects"
-msgstr ""
+msgstr "マルチモジュールプロジェクト"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:157
+#, fuzzy
 msgid "Note that continuous testing supports multi-module projects, so tests in modules other than the application can still be run when files are changed. The modules that are run can be controlled using config as listed below."
-msgstr ""
+msgstr "継続的テストは、マルチモジュールのプロジェクトをサポートしているので、ファイルが変更されても、アプリケーション以外のモジュールのテストが実行されることがあります。実行されるモジュールは、以下のようにコンフィグで制御できます。"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:159
+#, fuzzy
 msgid "This is enabled by default, and can be disabled via `quarkus.test.only-test-application-module=true`."
-msgstr ""
+msgstr "これはデフォルトで有効になっており、 `quarkus.test.only-test-application-module=true` で無効にすることができます。"
 
 #. type: Title ==
 #: upstream/_guides/continuous-testing.adoc:160
