--- a/l10n/po/ja_JP/_guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka.adoc.po
@@ -1240,24 +1240,27 @@ msgstr "`group.id` 属性が設定されていない場合は、 `quarkus.applic
 
 #. type: Title ===
 #: upstream/_guides/kafka.adoc:572
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Receiving Kafka Records in Batches"
-msgstr ""
+msgstr "Kafkaのレコードをバッチで受け取る"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:576
+#, fuzzy
 msgid "By default, incoming methods receive each Kafka record individually.  Under the hood, Kafka consumer clients poll the broker constantly and receive records in batches, presented inside the `ConsumerRecords` container."
-msgstr ""
+msgstr "デフォルトでは、受信メソッドは各Kafkaレコードを個別に受信します。フードの下では、Kafkaコンシューマークライアントがブローカーを常時ポーリングしてレコードをバッチで受信し、 `ConsumerRecords` コンテナ内に表示されます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:578
+#, fuzzy
 msgid "In *batch* mode, your application can receive all the records returned by the consumer *poll* in one go."
-msgstr ""
+msgstr "*バッチ*モードでは、アプリケーションは *コンシューマーポール*から返されたすべてのレコードを一度に受け取ることができます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:580
+#, fuzzy
 msgid "To achieve this you need to specify a compatible container type to receive all the data:"
-msgstr ""
+msgstr "これを実現するには、すべてのデータを受け取るために、互換性のあるコンテナタイプを指定する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/kafka.adoc:589
@@ -1286,8 +1289,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:593
+#, fuzzy
 msgid "The incoming method can also receive `Message<List<Payload>>`, `KafkaRecordBatch<Key, Payload>` `ConsumerRecords<Key, Payload>` types.  They give access to record details such as offset or timestamp:"
-msgstr ""
+msgstr "incomingメソッドは、 `Message&amp;lt;List&amp;lt;Payload&amp;gt;&amp;gt;`, `KafkaRecordBatch&amp;lt;Key, Payload&amp;gt;` `ConsumerRecords&amp;lt;Key, Payload&amp;gt;` タイプも受け取ることができます。これらのタイプは、オフセットやタイムスタンプなどのレコードの詳細にアクセスできます。"
 
 #. type: delimited block -
 #: upstream/_guides/kafka.adoc:606
@@ -1307,18 +1311,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:611
+#, fuzzy
 msgid "Note that the successful processing of the incoming record batch will commit the latest offsets for each partition received inside the batch.  The configured commit strategy will be applied for these records only."
-msgstr ""
+msgstr "受信したレコードバッチの処理が成功すると、バッチ内で受信した各パーティションの最新のオフセットがコミットされることに注意してください。設定されたコミット戦略は、これらのレコードにのみ適用されます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:613
+#, fuzzy
 msgid "Conversely, if the processing throws an exception, all messages are _nacked_, applying the failure strategy for all the records inside the batch."
-msgstr ""
+msgstr "逆に、処理で例外が発生した場合は、すべてのメッセージが _ナッキングさ_れ、バッチ内のすべてのレコードに失敗戦略が適用されます。"
 
 #. type: delimited block =
 #: upstream/_guides/kafka.adoc:618
+#, fuzzy
 msgid "Quarkus autodetects batch types for incoming channels and sets batch configuration automatically.  You can configure batch mode explicitly with `mp.messaging.incoming.$channel.batch` property."
-msgstr ""
+msgstr "Quarkusは、入力されるチャンネルのバッチタイプを自動検出し、バッチ設定を自動的に行います。 `mp.messaging.incoming.$channel.batch` プロパティでバッチモードを明示的に設定することができます。"
 
 #. type: Title ==
 #: upstream/_guides/kafka.adoc:620
@@ -2282,8 +2289,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1100
+#, fuzzy
 msgid "The `default-kafka-broker` configuration map contains all application properties prefixed with `kafka.` or `KAFKA_`.  For more configuration options check out <<kafka-configuration-resolution>>."
-msgstr ""
+msgstr "`default-kafka-broker` 構成マップには、 `kafka.` または `KAFKA_` をプレフィックスとするすべてのアプリケーションプロパティが含まれています。その他の設定オプションについては、 link:#kafka-configuration-resolution[[kafka-configuration-resolution]]をご覧ください。"
 
 #. type: Title ==
 #: upstream/_guides/kafka.adoc:1102
@@ -3634,8 +3642,9 @@ msgstr "SmallRye Reactive Messagingの設定についての詳細は、 link:htt
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1652
+#, fuzzy
 msgid "The most important attributes are listed in the tables below:"
-msgstr ""
+msgstr "最も重要な属性を以下の表に示します。"
 
 #. type: Title ===
 #: upstream/_guides/kafka.adoc:1653
@@ -3667,13 +3676,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1670
+#, fuzzy
 msgid "You can also pass any property supported by the underlying https://kafka.apache.org/documentation/#consumerconfigs[Kafka consumer]."
-msgstr ""
+msgstr "また、基盤となる link:https://kafka.apache.org/documentation/#consumerconfigs[Kafkaコンシューマー]がサポートする任意のプロパティを渡すこともできます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1672
+#, fuzzy
 msgid "For example, to configure the `max.poll.records` property, use:"
-msgstr ""
+msgstr "例えば、 `max.poll.records` プロパティを設定するには、次のようにします。"
 
 #. type: delimited block -
 #: upstream/_guides/kafka.adoc:1676
@@ -3684,33 +3695,39 @@ msgstr "mp.messaging.incoming.your-channel-name.attribute=value\n"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1679
+#, fuzzy
 msgid "Some consumer client properties are configured to sensible default values:"
-msgstr ""
+msgstr "一部のコンシューマークライアントプロパティは、常識的なデフォルト値に設定されています。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1681 upstream/_guides/kafka.adoc:1711
+#, fuzzy
 msgid "If not set, `reconnect.backoff.max.ms` is set to `10000` to avoid high load on disconnection."
-msgstr ""
+msgstr "設定されていない場合は、切断時の高負荷を避けるために `reconnect.backoff.max.ms` を `10000` に設定します。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1683
+#, fuzzy
 msgid "If not set, `key.deserializer` is set to `org.apache.kafka.common.serialization.StringDeserializer`."
-msgstr ""
+msgstr "設定されていない場合は、 `key.deserializer` が `org.apache.kafka.common.serialization.StringDeserializer` に設定されます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1685
+#, fuzzy
 msgid "The consumer `client.id` is configured according to the number of clients to create using `mp.messaging.incoming.[channel].partitions` property."
-msgstr ""
+msgstr "コンシューマー `client.id` は、 `mp.messaging.incoming.[channel].partitions` プロパティを使用して作成するクライアントの数に応じて設定されます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1687
+#, fuzzy
 msgid "If a `client.id` is provided, it is used as-is or suffixed with client index if `partitions` property is set."
-msgstr ""
+msgstr "`client.id` が提供されている場合は、そのまま使用され、 `partitions` プロパティが設定されている場合は、クライアントのインデックスがサフィックスとして使用されます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1688
+#, fuzzy
 msgid "If a `client.id` is not provided, it is generated as `kafka-consumer-[channel][-index]`."
-msgstr ""
+msgstr "`client.id` が用意されていない場合は、 `kafka-consumer-[channel][-index]` として生成されます。"
 
 #. type: Title ===
 #: upstream/_guides/kafka.adoc:1692
@@ -3726,18 +3743,21 @@ msgstr "mp.messaging.outgoing.your-channel-name.attribute=value\n"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1709
+#, fuzzy
 msgid "Some producer client properties are configured to sensible default values:"
-msgstr ""
+msgstr "一部のプロデューサークライアントプロパティは、常識的なデフォルト値に設定されています。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1713
+#, fuzzy
 msgid "If not set, `key.serializer` is set to `org.apache.kafka.common.serialization.StringSerializer`."
-msgstr ""
+msgstr "設定されていない場合は、 `key.serializer` が `org.apache.kafka.common.serialization.StringSerializer` に設定されます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1715
+#, fuzzy
 msgid "If not set, producer `client.id` is generated as `kafka-producer-[channel]`."
-msgstr ""
+msgstr "設定されていない場合、プロデューサー `client.id` は `kafka-producer-[channel]` として生成されます。"
 
 #. type: Title ===
 #: upstream/_guides/kafka.adoc:1719
@@ -3748,13 +3768,15 @@ msgstr "設定"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1723
+#, fuzzy
 msgid "Quarkus exposes all Kafka related application properties, prefixed with `kafka.` or `KAFKA_` inside a configuration map with `default-kafka-broker` name.  This configuration is used to establish the connection with the Kafka broker."
-msgstr ""
+msgstr "Quarkusは、 `default-kafka-broker` の名前を持つ設定マップの中で、 `kafka.` または `KAFKA_` の接頭辞を持つ、すべてのKafka関連のアプリケーションプロパティを公開します。この設定は、Kafkaブローカーとの接続を確立するために使用されます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1725
+#, fuzzy
 msgid "In addition to this default configuration, you can configure the name of the `Map` producer using the `kafka-configuration` attribute:"
-msgstr ""
+msgstr "このデフォルトの設定に加えて、 `kafka-configuration` 属性を使って `Map` プロデューサーの名前を設定することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/kafka.adoc:1730
@@ -3775,8 +3797,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1734
+#, fuzzy
 msgid "In this case, the connector looks for the `Map` associated with the `my-configuration` name.  If `kafka-configuration` is not set, an optional lookup for a `Map` exposed with the channel name (`my-channel` in the previous example) is done."
-msgstr ""
+msgstr "この場合、コネクタは `my-configuration` の名前に関連付けられた `Map` を探します。 `kafka-configuration` が設定されていない場合は、オプションとして、チャネル名で公開されている `Map` を探します（前の例では `my-channel` ）。"
 
 #. type: delimited block -
 #: upstream/_guides/kafka.adoc:1745
@@ -3794,28 +3817,33 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1748
+#, fuzzy
 msgid "If `kafka-configuration` is set and no `Map` can be found, the deployment fails."
-msgstr ""
+msgstr "`kafka-configuration` が設定されていて、 `Map` が見つからない場合、デプロイは失敗します。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1750
+#, fuzzy
 msgid "Attribute values are resolved as follows:"
-msgstr ""
+msgstr "属性の値は以下のように解決されます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1752
+#, fuzzy
 msgid "the attribute is set directly on the channel configuration (`mp.messaging.incoming.my-channel.attribute=value`),"
-msgstr ""
+msgstr "の属性は、チャンネル設定で直接設定されます( `mp.messaging.incoming.my-channel.attribute=value`)。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1753
+#, fuzzy
 msgid "if not set, the connector looks for a `Map` with the channel name or the configured `kafka-configuration` (if set) and the value is retrieved from that `Map`"
-msgstr ""
+msgstr "設定されていない場合、コネクタはチャネル名または設定された `kafka-configuration` (設定されている場合)を持つ `Map` を探し、そこから値を取得します。 `Map`"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:1754
+#, fuzzy
 msgid "If the resolved `Map` does not contain the value the default `Map` is used (exposed with the `default-kafka-broker` name)"
-msgstr ""
+msgstr "解決された `Map` に値が含まれていない場合は、デフォルトの `Map` が使用されます（ `default-kafka-broker` の名前で公開されます）。"
 
 #. type: Title ==
 #: upstream/_guides/kafka.adoc:1755
