--- a/l10n/po/ja_JP/_guides/security-openid-connect-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-dev-services.adoc.po
@@ -594,8 +594,9 @@ msgstr "他のプロバイダを使用している場合、「 link:#keycloak-au
 
 #. type: delimited block =
 #: upstream/_guides/security-openid-connect-dev-services.adoc:224
+#, fuzzy
 msgid "The current access token is used by default to test the service with `Swagger UI` or `GrapghQL UI`. If the provider (other than Keycloak) returns a binary access token then it will be used with `Swagger UI` or `GrapghQL UI` only if this provider has a token introspection endpoint otherwise an `IdToken` which is always in a JWT format will be passed to `Swagger UI` or `GrapghQL UI`. In such cases you can verify with the manual Dev UI test that `401` will always be returned for the current binary access token. Also note that using `IdToken` as a fallback with either of these UIs is only possible with the authorization code flow."
-msgstr ""
+msgstr "現在のアクセストークンは、 `Swagger UI` または `GrapghQL UI` でサービスをテストするためにデフォルトで使用されます。プロバイダ（Keycloak以外）がバイナリアクセストークンを返す場合、そのプロバイダがトークンイントロスペクションエンドポイントを持っている場合に限り、 `Swagger UI` または `GrapghQL UI` で使用されます。そうでない場合は、常にJWT形式である `IdToken` が `Swagger UI` または `GrapghQL UI` に渡されます。このような場合には、マニュアルのDev UIテストで、現在のバイナリアクセストークンに対して常に `401` が返されることを確認できます。また、これらのUIのいずれかで `IdToken` をフォールバックとして使用することは、認可コードフローでのみ可能であることに注意してください。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-dev-services.adoc:227
