--- a/l10n/po/ja_JP/_guides/smallrye-kafka-outgoing.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-kafka-outgoing.adoc.po
@@ -48,9 +48,9 @@ msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_guides/smallrye-kafka-outgoing.adoc:6
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "[.no-hyphens]#*acks*#"
-msgstr ""
+msgstr "<span class=\"no-hyphens\"> *アク*</span>"
 
 #. type: Table
 #: upstream/_guides/smallrye-kafka-outgoing.adoc:8
@@ -428,24 +428,24 @@ msgstr "`2000`"
 
 #. type: Table
 #: upstream/_guides/smallrye-kafka-outgoing.adoc:92
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "[.no-hyphens]#*kafka-configuration*#"
-msgstr ""
+msgstr "<span class=\"no-hyphens\"> *kafka-configuration*</span>"
 
 #. type: Table
 #: upstream/_guides/smallrye-kafka-outgoing.adoc:94
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "Identifier of a CDI bean that provides the default Kafka consumer/producer configuration for this channel. The channel configuration can still override any attribute. The bean must have a type of Map<String, Object> and must use the @io.smallrye.common.annotation.Identifier qualifier to set the identifier.\n"
 "\n"
 "Type: _string_"
-msgstr ""
+msgstr "このチャネルのデフォルトのKafkaコンシューマ/プロデューサ構成を提供するCDI Beanの識別子です。チャネル構成は、任意の属性をオーバーライドできます。このBeanはMap&lt;String, Object&gt;のタイプを持ち、@io.smallrye.common.annotation.Identifier qualifierを使用して識別子を設定する必要があります。"
 
 #. type: Table
 #: upstream/_guides/smallrye-kafka-outgoing.adoc:96
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "[.no-hyphens]#*key*#"
-msgstr ""
+msgstr "<span class=\"no-hyphens\"> *キー*</span>"
 
 #. type: Table
 #: upstream/_guides/smallrye-kafka-outgoing.adoc:98
@@ -500,9 +500,9 @@ msgstr "`1024`"
 
 #. type: Table
 #: upstream/_guides/smallrye-kafka-outgoing.adoc:108
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "[.no-hyphens]#*merge*#"
-msgstr ""
+msgstr "<span class=\"no-hyphens\"> *マージ*</span>"
 
 #. type: Table
 #: upstream/_guides/smallrye-kafka-outgoing.adoc:110
@@ -515,9 +515,9 @@ msgstr "コネクタが複数のアップストリームを許可するかどう
 
 #. type: Table
 #: upstream/_guides/smallrye-kafka-outgoing.adoc:112
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "[.no-hyphens]#*partition*#"
-msgstr ""
+msgstr "<span class=\"no-hyphens\"> *パーティション*</span>"
 
 #. type: Table
 #: upstream/_guides/smallrye-kafka-outgoing.adoc:114
@@ -551,9 +551,9 @@ msgstr "受信レコードのキーを送信レコードに伝搬させる"
 
 #. type: Table
 #: upstream/_guides/smallrye-kafka-outgoing.adoc:120
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "[.no-hyphens]#*retries*#"
-msgstr ""
+msgstr "<span class=\"no-hyphens\"> *リトライ*</span>"
 
 #. type: Table
 #: upstream/_guides/smallrye-kafka-outgoing.adoc:122
@@ -572,9 +572,9 @@ msgstr "`2147483647`"
 
 #. type: Table
 #: upstream/_guides/smallrye-kafka-outgoing.adoc:124
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "[.no-hyphens]#*topic*#"
-msgstr ""
+msgstr "<span class=\"no-hyphens\"> *トピック*</span>"
 
 #. type: Table
 #: upstream/_guides/smallrye-kafka-outgoing.adoc:126
