--- a/l10n/po/ja_JP/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.4.0.Final released - Hibernate Reactive 1.0.0, Kafka Streams DevUI, Multi module continuous testing, AWT image resize via new AWT extension and much more'\n"
@@ -34,157 +34,185 @@ msgid ""
 "author: alexeyloubyansky\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 2.4.0.Finalリリース - Hibernate Reactive 1.0.0, Kafka Streams DevUI, Multi module continuous testing, AWT image resize via new AWT extension and much more'\n"
+"date: 2021-10-27\n"
+"tags: release\n"
+"synopsis: 「Quarkus 2.4は、新機能と、全体的に多くの改良と改善をもたらしています」。\n"
+"author: alexeyloubyansky\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:11
+#, fuzzy
 msgid "Today, we release Quarkus 2.4.0.Final which includes a lot of refinements and improvements and some new features:"
-msgstr ""
+msgstr "本日、Quarkus 2.4.0.Finalをリリースしました。多くの改良と改善、いくつかの新機能が含まれています。"
 
 #. type: Title ===
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:13
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:23
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Hibernate Reactive 1.0.0.Final"
-msgstr ""
+msgstr "ハイバーネート・リアクティブ 1.0.0.ファイナル"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:14
+#, fuzzy
 msgid "Introducing Kafka Streams DevUI"
-msgstr ""
+msgstr "Kafka Streams DevUIの紹介"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:15
+#, fuzzy
 msgid "Support continuous testing for multi module projects"
-msgstr ""
+msgstr "複数のモジュールからなるプロジェクトの継続的なテストをサポート"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:16
+#, fuzzy
 msgid "Support AWT image resize via new AWT extension"
-msgstr ""
+msgstr "新しいAWT拡張機能によるAWT画像リサイズのサポート"
 
 #. type: Title ==
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:17
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Migration Guide"
-msgstr ""
+msgstr "マイグレーションガイド"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:20
+#, fuzzy
 msgid "To migrate from 2.3, please refer to link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.4[our migration guide]."
-msgstr ""
+msgstr "2.3からの移行については、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.4[移行ガイド]をご参照ください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:21
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "What's new?"
-msgstr ""
+msgstr "最新情報は？"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:26
+#, fuzzy
 msgid "Among other fixes and improvements, in this release all methods which \"open a session\" have been made reactive."
-msgstr ""
+msgstr "その他の修正・改善点としては、今回のリリースでは、「セッションを開く」メソッドがすべて反応するようになりました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:28
+#, fuzzy
 msgid "Please, refer to the link:https://hibernate.org/reactive/documentation/1.0/reference/html_single/#getting-started[getting started documentation] to find out more about the release."
-msgstr ""
+msgstr "このリリースの詳細については、 link:https://hibernate.org/reactive/documentation/1.0/reference/html_single/#getting-started[スタートアップ・ドキュメント]を参照してください。"
 
 #. type: Title ===
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:29
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Kafka Streams DevUI"
-msgstr ""
+msgstr "Kafka Streams DevUI"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:32
+#, fuzzy
 msgid "The Quarkus DevUI now includes support for the topology visualizer, which looks like link:https://user-images.githubusercontent.com/593564/136768958-9a66c25b-c3fa-4a6c-9211-8cedd845eb55.png[this example]."
-msgstr ""
+msgstr "Quarkus DevUIでは、 link:https://user-images.githubusercontent.com/593564/136768958-9a66c25b-c3fa-4a6c-9211-8cedd845eb55.png[以下の例]のようなトポロジービジュアライザーがサポートされています。"
 
 #. type: Title ===
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:33
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Continuous testing for multi module projects"
-msgstr ""
+msgstr "複数モジュールのプロジェクトにおける継続的なテスト"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:36
+#, fuzzy
 msgid "Continuous testing will now run tests from all the project modules, with the option to configure the old behaviour. The new config options include:"
-msgstr ""
+msgstr "継続的テストでは、プロジェクトのすべてのモジュールからテストが実行されるようになり、従来の動作を設定するオプションも用意されています。新しい設定オプションは以下の通りです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:38
+#, fuzzy
 msgid "quarkus.test.only-test-application-module (default value is false) - if false then tests from all dependency modules will be run as well;"
-msgstr ""
+msgstr "quarkus.test.only-test-application-module (default value is false) - false の場合、依存関係にあるすべてのモジュールのテストも実行されます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:39
+#, fuzzy
 msgid "quarkus.test.include-module-pattern - a regular expression matched against the module groupId:artifactId, tests from the matched modules will be included in the continuous testing;"
-msgstr ""
+msgstr "quarkus.test.include-module-pattern - モジュールの groupId:artifactId にマッチした正規表現で、マッチしたモジュールのテストは継続的なテストに含まれます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:40
+#, fuzzy
 msgid "quarkus.test.exclude-module-pattern (ignored if `include-module-pattern` has been set) - a regular expression and is matched against the module groupId:artifactId, tests from the matched modules will be excluded from the continuous testing."
-msgstr ""
+msgstr "quarkus.test.exclude-module-pattern ( `include-module-pattern` が設定されている場合は無視されます) - 正規表現で、モジュールの groupId:artifactId と照合され、照合されたモジュールのテストは継続的なテストから除外されます。"
 
 #. type: Title ===
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:41
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "AWT image resize via new AWT extension"
-msgstr ""
+msgstr "新しいAWT拡張機能によるAWT画像のリサイズ"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:44
+#, fuzzy
 msgid "A new `io.quarkus:quarkus-awt` extension for AWT and Java2D usage was added to enable various AWT use-cases, such as image resizing."
-msgstr ""
+msgstr "AWTとJava2Dを使用するための新しい `io.quarkus:quarkus-awt` 拡張機能が追加され、画像のリサイズなど様々なAWTの使用方法が可能になりました。"
 
 #. type: Title ==
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:45
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Contributors"
-msgstr ""
+msgstr "貢献者"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:49
+#, fuzzy
 msgid "The Quarkus community is growing and has now https://github.com/quarkusio/quarkus/graphs/contributors[549 contributors].  Many many thanks to each and everyone of them."
-msgstr ""
+msgstr "Quarkusコミュニティは成長を続けており、現在 link:https://github.com/quarkusio/quarkus/graphs/contributors[549名の方にご協力いただい]ています。それぞれの方に感謝します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:51
+#, fuzzy
 msgid "In particular for the 2.4 release, thanks to A. N. M. Bazlur Rahman (Rokon), Alexey Loubyansky, Andy Damevin, Arne Mejlholm, Bill Burke, Chris Laprun, Clement Escoffier, Daniel Petisme, Davide, Dheeraj Nalluri, Dmitrii K, Eduard Tudenhoefner, Erin Schnabel, Falko Modler, Foivos Zakkak, Galder Zamarreño, George Gastaldi, Georgios Andrianakis, Guillaume Le Floch, Guillaume Smet, Gwenneg Lepage, hbelmiro, Jaikiran, Jaikiran Pai, Jakub Scholz, Jan Martiška, Javier Toja, Jose, Julien Ponge, kdnakt, Knut Wannheden, Ladislav Thon, Loïc Mathieu, Manyanda Chitimbo, Marc Nuri, Martin Kouba, Michael Schnitzler, Michael Simons, Michał Szynkiewicz, Nathan Erwin, NetoDevel, Nicolas Filotto, Ozan Gunalp, Phillip Kruger, Phillip Krüger, Robbie Gemmell, Roberto Cortez, Rostislav Svoboda, Sanne Grinovero, Sauli Anto, sberyozkin, seregamorph, Sergey Beryozkin, Stuart Douglas, Tomas Hofman, Vincent Sevel, Wayne Ellis, xstefank, Yannick Reifschneider, Yoann Rodière."
-msgstr ""
+msgstr "特に2.4のリリースについては、A. N. M.に感謝します。Bazlur Rahman (Rokon), Alexey Loubyansky, Andy Damevin, Arne Mejlholm, Bill Burke, Chris Laprun, Clement Escoffier, Daniel Petisme, Davide, Dheeraj Nalluri, Dmitrii K, Eduard Tudenhoefner, Erin Schnabel, Falko Modler, Foivos Zakkak,Galder Zamarreño, George Gastaldi, Georgios Andrianakis, Guillaume Le Floch, Guillaume Smet, Gwenneg Lepage, hbelmiro, Jaikiran, Jaikiran Pai, Jakub Scholz, Jan Martiška, Javier Toja, Jose, Julien Ponge, kdnakt, Knut Wannheden,Ladislav Thon, Loïc Mathieu, Manyanda Chitimbo, Marc Nuri, Martin Kouba, Michael Schnitzler, Michael Simons, Michał Szynkiewicz, Nathan Erwin, NetoDevel, Nicolas Filotto, Ozan Gunalp, Phillip Kruger, Phillip Krüger,Robbie Gemmell, Roberto Cortez, Rostislav Svoboda, Sanne Grinovero, Sauli Anto, sberyozkin, seregamorph, Sergey Beryozkin, Stuart Douglas, Tomas Hofman, Vincent Sevel, Wayne Ellis, xstefank, Yannick Reifschneider, Yoann Rodière."
 
 #. type: Title ==
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:52
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Come Join Us"
-msgstr ""
+msgstr "私たちと一緒に働きませんか？"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:55
+#, fuzzy
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
-msgstr ""
+msgstr "皆様からのフィードバックを大切にしていますので、バグを報告したり、改善を求めたりしてください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:57
+#, fuzzy
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr ""
+msgstr "Quarkusをお使いの方、または興味のある方は、恥ずかしがらずに私たちの歓迎するコミュニティに参加してください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:59
+#, fuzzy
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr ""
+msgstr "は、 link:https://github.com/quarkusio/quarkus/issues[GitHub]でフィードバックを行っています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:60
+#, fuzzy
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr ""
+msgstr "コードを作って link:https://github.com/quarkusio/quarkus/pulls[PRをし]てください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:61
+#, fuzzy
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr ""
+msgstr "link:https://quarkusio.zulipchat.com/[Zulip]や link:https://groups.google.com/d/forum/quarkus-dev[メーリングリスト]で議論することができます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc:61
+#, fuzzy
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr ""
+msgstr "link:https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]で質問をしてみましょう。"
