Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-web-authentication.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-28 02:20+0000\n"
+"POT-Creation-Date: 2021-10-30 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1958,7 +1958,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-web-authentication.adoc:1013
 #, fuzzy, no-wrap
 #| msgid "How to check the errors in the logs"
-msgid "How to check the errors in the logs =="
+msgid "How to check the errors in the logs"
 msgstr "ログでエラーを確認する方法"
 
 #. type: Plain text
