--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-config-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-config-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-06 02:17+0000\n"
+"POT-Creation-Date: 2021-10-30 02:17+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,7 +43,7 @@ msgstr "デフォルト"
 #: upstream/_generated-config/main/config/quarkus-config-config.adoc:16
 #, no-wrap
 msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-config-config_quarkus.config.locations]]`link:#quarkus-config-config_quarkus.config.locations[quarkus.config.locations]`\n"
+"[[quarkus-config-config_quarkus.config.locations]]`link:#quarkus-config-config_quarkus.config.locations[quarkus.config.locations]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -61,7 +61,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-config-config.adoc:25
 #, no-wrap
 msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-config-config_quarkus.config.profile.parent]]`link:#quarkus-config-config_quarkus.config.profile.parent[quarkus.config.profile.parent]`\n"
+"[[quarkus-config-config_quarkus.config.profile.parent]]`link:#quarkus-config-config_quarkus.config.profile.parent[quarkus.config.profile.parent]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -80,7 +80,7 @@ msgstr "string"
 #: upstream/_generated-config/main/config/quarkus-config-config.adoc:34
 #, no-wrap
 msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-config-config_quarkus.uuid]]`link:#quarkus-config-config_quarkus.uuid[quarkus.uuid]`\n"
+"[[quarkus-config-config_quarkus.uuid]]`link:#quarkus-config-config_quarkus.uuid[quarkus.uuid]`\n"
 "\n"
 "[.description]\n"
 "--\n"
