Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-devservices-dev-devservices-global-dev-services-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-devservices-dev-devservices-global-dev-services-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-17 02:15+0000\n"
+"POT-Creation-Date: 2021-11-02 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -58,7 +58,43 @@ msgid "boolean"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-devservices-dev-devservices-global-dev-services-config.adoc:19
+#: upstream/_generated-config/main/config/quarkus-devservices-dev-devservices-global-dev-services-config.adoc:20
 #, no-wrap
 msgid "`true`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-devservices-dev-devservices-global-dev-services-config.adoc:25
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-devservices-dev-devservices-global-dev-services-config_quarkus.devservices.timeout]]`link:#quarkus-devservices-dev-devservices-global-dev-services-config_quarkus.devservices.timeout[quarkus.devservices.timeout]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The timeout for starting a container\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-devservices-dev-devservices-global-dev-services-config.adoc:27
+#, no-wrap
+msgid ""
+"link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]\n"
+"  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]"
+msgstr ""
+
+#. type: Block title
+#: upstream/_generated-config/main/config/quarkus-devservices-dev-devservices-global-dev-services-config.adoc:33
+#, no-wrap
+msgid "About the Duration format"
+msgstr ""
+
+#. type: delimited block =
+#: upstream/_generated-config/main/config/quarkus-devservices-dev-devservices-global-dev-services-config.adoc:37
+msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
+msgstr ""
+
+#. type: delimited block =
+#: upstream/_generated-config/main/config/quarkus-devservices-dev-devservices-global-dev-services-config.adoc:41
+msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
 msgstr ""
