--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -1,4 +1,5 @@
 Filename, Fuzzy Messages, Total Messages, Fuzzy Words, Total Words, Achievement
+l10n/po/ja_JP/_posts/2021-11-03-quarkus-2-4-1-final-released.adoc.po, 0, 14, 0, 153 ,100%
 l10n/po/ja_JP/_posts/2021-10-27-quarkus-2-4-0-final-released.adoc.po, 0, 31, 0, 501 ,100%
 l10n/po/ja_JP/_posts/2021-10-25-intellij-quarkus-tools-1.8.0.adoc.po, 0, 22, 0, 215 ,100%
 l10n/po/ja_JP/_posts/2021-10-20-quarkus-2-3-1-final-released.adoc.po, 0, 14, 0, 153 ,100%
