Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-09-21 02:19+0000\n"
+"POT-Creation-Date: 2021-11-04 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -146,6 +146,8 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:591
 #: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:609
 #: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:636
+#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:690
+#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:699
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -266,7 +268,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:441
 #: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:540
 #: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:675
-#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:683
+#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:684
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
@@ -405,6 +407,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:618
 #: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:627
 #: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:645
+#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:708
 #, no-wrap
 msgid "list of string"
 msgstr ""
@@ -1128,6 +1131,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:612
 #: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:648
 #: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:666
+#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:702
 #, no-wrap
 msgid "required icon:exclamation-circle[title=Configuration property is required]"
 msgstr ""
@@ -1234,29 +1238,71 @@ msgid ""
 "--"
 msgstr ""
 
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:689
+#, no-wrap
+msgid ""
+"[[quarkus-vertx-http-general-config-items_quarkus.http.header.-header-.path]]`link:#quarkus-vertx-http-general-config-items_quarkus.http.header.-header-.path[quarkus.http.header.\"header\".path]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The path this header should be applied\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:693
+#, no-wrap
+msgid "`/*`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:698
+#, no-wrap
+msgid ""
+"[[quarkus-vertx-http-general-config-items_quarkus.http.header.-header-.value]]`link:#quarkus-vertx-http-general-config-items_quarkus.http.header.-header-.value[quarkus.http.header.\"header\".value]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The value for this header configuration\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:707
+#, no-wrap
+msgid ""
+"[[quarkus-vertx-http-general-config-items_quarkus.http.header.-header-.methods]]`link:#quarkus-vertx-http-general-config-items_quarkus.http.header.-header-.methods[quarkus.http.header.\"header\".methods]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The HTTP methods for this header configuration\n"
+"--"
+msgstr ""
+
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:687
+#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:714
 #, no-wrap
 msgid "About the Duration format"
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:691
+#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:718
 msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
 msgstr "期間のフォーマットは標準の `java.time.Duration` フォーマットを使用します。詳細は link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc] を参照してください。"
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:695
+#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:722
 msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
 msgstr "数値で始まる期間の値を指定することもできます。この場合、値が数値のみで構成されている場合、コンバーターは値を秒として扱います。そうでない場合は、 `PT` が暗黙的に値の前に付加され、標準の `java.time.Duration` 形式が得られます。"
 
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:700
+#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:727
 #, no-wrap
 msgid "About the MemorySize format"
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:704
+#: upstream/_generated-config/main/config/quarkus-vertx-http-general-config-items.adoc:731
 msgid "A size configuration option recognises string in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.  If no suffix is given, assume bytes."
 msgstr ""
