--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-vertx-http.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-vertx-http.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-09-22 02:22+0000\n"
+"POT-Creation-Date: 2021-11-04 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -117,6 +117,8 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:866
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:884
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:911
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:965
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:974
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -344,7 +346,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:615
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:786
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:950
-#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:958
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:959
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
@@ -610,6 +612,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:887
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:923
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:941
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:977
 #, no-wrap
 msgid "required icon:exclamation-circle[title=Configuration property is required]"
 msgstr ""
@@ -720,6 +723,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:893
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:902
 #: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:920
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:983
 #, no-wrap
 msgid "list of string"
 msgstr ""
@@ -1728,29 +1732,71 @@ msgid ""
 "--"
 msgstr ""
 
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:964
+#, no-wrap
+msgid ""
+"[[quarkus-vertx-http_quarkus.http.header.-header-.path]]`link:#quarkus-vertx-http_quarkus.http.header.-header-.path[quarkus.http.header.\"header\".path]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The path this header should be applied\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:968
+#, no-wrap
+msgid "`/*`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:973
+#, no-wrap
+msgid ""
+"[[quarkus-vertx-http_quarkus.http.header.-header-.value]]`link:#quarkus-vertx-http_quarkus.http.header.-header-.value[quarkus.http.header.\"header\".value]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The value for this header configuration\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:982
+#, no-wrap
+msgid ""
+"[[quarkus-vertx-http_quarkus.http.header.-header-.methods]]`link:#quarkus-vertx-http_quarkus.http.header.-header-.methods[quarkus.http.header.\"header\".methods]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The HTTP methods for this header configuration\n"
+"--"
+msgstr ""
+
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:962
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:989
 #, no-wrap
 msgid "About the Duration format"
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:966
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:993
 msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
 msgstr "期間のフォーマットは標準の `java.time.Duration` フォーマットを使用します。詳細は link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc] を参照してください。"
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:970
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:997
 msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
 msgstr "数値で始まる期間の値を指定することもできます。この場合、値が数値のみで構成されている場合、コンバーターは値を秒として扱います。そうでない場合は、 `PT` が暗黙的に値の前に付加され、標準の `java.time.Duration` 形式が得られます。"
 
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:975
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1002
 #, no-wrap
 msgid "About the MemorySize format"
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:979
+#: upstream/_generated-config/main/config/quarkus-vertx-http.adoc:1006
 msgid "A size configuration option recognises string in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.  If no suffix is given, assume bytes."
 msgstr ""
