--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-qute-qute-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-qute-qute-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-28 02:16+0000\n"
+"POT-Creation-Date: 2021-11-05 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -116,7 +116,35 @@ msgid ".*\\/\\..*$`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:53
+#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:57
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-qute-qute-config_quarkus.qute.iteration-metadata-prefix]]`link:#quarkus-qute-qute-config_quarkus.qute.iteration-metadata-prefix[quarkus.qute.iteration-metadata-prefix]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The prefix is used to access the iteration metadata inside a loop section. \n"
+" A valid prefix consists of alphanumeric characters and underscores. Three special constants can be used:  \n"
+" - `<alias_>` - the alias of an iterated element suffixed with an underscore is used, e.g. `item_hasNext` and `it_count` \n"
+" - `<alias?>` - the alias of an iterated element suffixed with a question mark is used, e.g. `item?hasNext` and `it?count` \n"
+" - `<none>` - no prefix is used, e.g. `hasNext` and `count`  By default, the `<alias_>` constant is set.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:58
+#, no-wrap
+msgid "string"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:61
+#, no-wrap
+msgid "`<alias_>`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:66
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-qute-qute-config_quarkus.qute.content-types-content-types]]`link:#quarkus-qute-qute-config_quarkus.qute.content-types-content-types[quarkus.qute.content-types]`\n"
@@ -128,7 +156,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:54
+#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:67
 #, no-wrap
 msgid "`Map<String,String>`"
 msgstr ""
