Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-redis-client-config-group-redis-config-redis-configuration.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-redis-client-config-group-redis-config-redis-configuration.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-08 02:42+0000\n"
+"POT-Creation-Date: 2021-11-06 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -172,7 +172,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-redis-client-config-group-redis-config-redis-configuration.adoc:49
 #: upstream/_generated-config/main/config/quarkus-redis-client-config-group-redis-config-redis-configuration.adoc:231
 #, no-wrap
-msgid "`standalone`, `sentinel`, `cluster`"
+msgid "`standalone`, `sentinel`, `cluster`, `replication`"
 msgstr ""
 
 #. type: Table
