--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-redis-client-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-redis-client-general-config-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-04 02:13+0000\n"
+"POT-Creation-Date: 2021-11-06 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -298,7 +298,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-redis-client-general-config-items.adoc:99
 #: upstream/_generated-config/main/config/quarkus-redis-client-general-config-items.adoc:331
 #, no-wrap
-msgid "`standalone`, `sentinel`, `cluster`"
+msgid "`standalone`, `sentinel`, `cluster`, `replication`"
 msgstr ""
 
 #. type: Table
