Add some translations

--- a/l10n/po/ja_JP/_guides/security-ldap.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-ldap.adoc.po
@@ -7,24 +7,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-08-31 13:16+0000\n"
-"PO-Revision-Date: 2021-03-26 22:50+0900\n"
+"PO-Revision-Date: 2021-11-08 13:51+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/security-ldap.adoc:6
-#, fuzzy, no-wrap
-#| msgid "Quarkus - Using Security with an LDAP Realm"
+#, no-wrap
 msgid "Using Security with an LDAP Realm"
-msgstr "Quarkus - LDAPレルムでセキュリティーを使用する"
+msgstr "LDAPレルムと共にセキュリティーを使用する"
 
 #. type: Plain text
 #: upstream/_guides/security-ldap.adoc:11
