--- a/l10n/po/ja_JP/_guides/credentials-provider.adoc.po
+++ b/l10n/po/ja_JP/_guides/credentials-provider.adoc.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-08-31 13:16+0000\n"
-"PO-Revision-Date: 2021-04-11 21:10+0900\n"
+"PO-Revision-Date: 2021-11-08 14:21+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -63,10 +63,9 @@ msgstr "`reactive-mysql-client`"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:35
-#, fuzzy
 #| msgid "`reactive-mysql-client`"
 msgid "`reactive-mssql-client`"
-msgstr "`reactive-mysql-client`"
+msgstr "`reactive-mssql-client`"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:36
@@ -75,16 +74,14 @@ msgstr "`reactive-pg-client`"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:37
-#, fuzzy
 msgid "`oidc`"
 msgstr "`oidc`"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:38
-#, fuzzy
 #| msgid "`reactive-db2-client`"
 msgid "`oidc-client`"
-msgstr "`reactive-db2-client`"
+msgstr "`oidc-client`"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:42
@@ -119,10 +116,9 @@ msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:56
-#, fuzzy
 #| msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
 msgid "JDK 11+ installed with `JAVA_HOME` configured appropriately"
-msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
+msgstr "JDK 11+ がインストールされ、 `JAVA_HOME` が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:57
