--- a/l10n/po/ja_JP/_guides/rest-data-panache.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-data-panache.adoc.po
@@ -7,24 +7,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-10-06 08:09+0000\n"
-"PO-Revision-Date: 2021-03-31 00:21+0900\n"
+"PO-Revision-Date: 2021-11-08 14:19+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/rest-data-panache.adoc:6
-#, fuzzy, no-wrap
-#| msgid "Quarkus - Generating JAX-RS resources with Panache"
+#, no-wrap
 msgid "Generating JAX-RS resources with Panache"
-msgstr "Quarkus - Panacheを利用したJAX-RSリソースの生成"
+msgstr "Panacheを利用したJAX-RSリソースの生成"
 
 #. type: Plain text
 #: upstream/_guides/rest-data-panache.adoc:13
@@ -67,8 +66,6 @@ msgstr "JDBC ドライバーエクステンション ( `quarkus-jdbc-postgresql`
 #. type: Plain text
 #: upstream/_guides/rest-data-panache.adoc:27
 #: upstream/_guides/rest-data-panache.adoc:54
-#, fuzzy
-#| msgid "One of the RESTEasy JSON serialization extensions (`quarkus-resteasy-jackson` or `quarkus-resteasy-jsonb`)"
 msgid "One of the RESTEasy JSON serialization extensions (`quarkus-resteasy-reactive-jackson` or `quarkus-resteasy-reactive-jsonb`)"
 msgstr "RESTEasy JSON シリアライゼーションエクステンションのどれか ( `quarkus-resteasy-jackson` または `quarkus-resteasy-jsonb` )"
 
