--- a/l10n/po/ja_JP/_guides/security-jdbc.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jdbc.adoc.po
@@ -7,24 +7,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-08-31 13:16+0000\n"
-"PO-Revision-Date: 2021-03-26 22:57+0900\n"
+"PO-Revision-Date: 2021-11-08 14:18+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/security-jdbc.adoc:6
-#, fuzzy, no-wrap
-#| msgid "Quarkus - Using Security with JDBC"
+#, no-wrap
 msgid "Using Security with JDBC"
-msgstr "Quarkus - JDBCでセキュリティーを使用する"
+msgstr "JDBCでセキュリティーを使用する"
 
 #. type: Plain text
 #: upstream/_guides/security-jdbc.adoc:11
@@ -54,10 +53,8 @@ msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_guides/security-jdbc.adoc:20
-#, fuzzy
-#| msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
 msgid "JDK 11+ installed with `JAVA_HOME` configured appropriately"
-msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
+msgstr "JDK 11+ がインストールされ、 `JAVA_HOME` が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/security-jdbc.adoc:21
