--- a/l10n/po/ja_JP/_guides/dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/dev-services.adoc.po
@@ -3,150 +3,137 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-08-31 13:17+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-11-08 14:47+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/dev-services.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Dev Services Overview"
-msgstr "開発サービスの概要"
+msgstr "Dev Servicesの概要"
 
 #. type: Plain text
 #: upstream/_guides/dev-services.adoc:14
-#, fuzzy
 msgid "Quarkus supports the automatic provisioning of unconfigured services in development and test mode. We refer to this capability as Dev Services. From a developers perspective this means that if you include an extension and don't configure it then Quarkus will automatically start the relevant service (usually using https://www.testcontainers.org/[Testcontainers] behind the scenes) and wire up your application to use this service."
-msgstr "Quarkusは、開発およびテストモードでの未設定サービスの自動プロビジョニングをサポートしています。この機能を「開発サービス」と呼んでいます。開発者の視点から見ると、拡張機能を含めてもそれを設定しなければ、Quarkusは自動的に関連するサービスを開始し（通常、舞台裏で link:https://www.testcontainers.org/[Testcontainers]を使用します）、このサービスを使用するためにアプリケーションを配線することを意味します。"
+msgstr "Quarkusは、開発およびテストモードでの未設定サービスの自動プロビジョニングをサポートしています。この機能をDev Servicesと呼んでいます。開発者の視点から見ると、エクステンションを含めてもそれを設定しなければ、Quarkusは自動的に関連するサービスを開始し（通常、舞台裏で link:https://www.testcontainers.org/[Testcontainers]を使用します）、このサービスを使用するためにアプリケーションを設定することを意味します。"
 
 #. type: Plain text
 #: upstream/_guides/dev-services.adoc:18
-#, fuzzy
 msgid "All this functionality is part of the Quarkus `deployment` modules, so does not affect the production application in any way. If you want to disable all Dev Services you can use the `quarkus.devservices.enabled=false` config property, although in most cases this is not necessary as simply configuring the service will result in the Dev Service being disabled automatically."
-msgstr "この機能はすべて、Quarkus `deployment` モジュールの一部であり、本番アプリケーションには一切影響しません。すべての開発サービスを無効にしたい場合は、 `quarkus.devservices.enabled=false` 構成プロパティを使用できますが、ほとんどの場合、サービスを構成するだけで開発サービスが自動的に無効になるため、この設定は必要ありません。"
+msgstr "この機能はすべて、Quarkus `deployment` モジュールの一部であり、本番アプリケーションには一切影響しません。すべてのDev Servicesを無効にしたい場合は、 `quarkus.devservices.enabled=false` 構成プロパティを使用できますが、ほとんどの場合、サービスを構成するだけでDev Servicesが自動的に無効になるため、この設定は必要ありません。"
 
 #. type: Plain text
 #: upstream/_guides/dev-services.adoc:20
-#, fuzzy
 msgid "This page lists all the Dev Services that Quarkus supports."
 msgstr "このページでは、QuarkusがサポートしているすべてのDev Servicesを紹介しています。"
 
 #. type: Plain text
 #: upstream/_guides/dev-services.adoc:23
-#, fuzzy
 msgid "In order to use Dev Services you will generally need a working Docker environment (remote environments are supported).  If you don't have Docker installed you will need to configure your services normally."
-msgstr "開発サービスを利用するには、通常、Dockerが動作する環境が必要です（リモート環境もサポートされています）。もしDockerがインストールされていない場合は、通常のサービスを設定する必要があります。"
+msgstr "Dev Servicesを利用するには、通常、Dockerが動作する環境が必要です（リモート環境もサポートされています）。もしDockerがインストールされていない場合は、通常のサービスを設定する必要があります。"
 
 #. type: Title ==
 #: upstream/_guides/dev-services.adoc:24
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "AMQP"
 msgstr "AMQP"
 
 #. type: Plain text
 #: upstream/_guides/dev-services.adoc:29
-#, fuzzy
 msgid "The AMQP Dev Service will be enabled when the `quarkus-smallrye-reactive-messaging-amqp` extension is present in your application, and the broker address has not been explicitly configured. More information can be found at the link:amqp-dev-services[AMQP Dev Services Guide]."
-msgstr "AMQP Dev Serviceは、アプリケーションに `quarkus-smallrye-reactive-messaging-amqp` 拡張機能が存在し、ブローカー・アドレスが明示的に構成されていない場合に有効になります。詳細は、『 link:amqp-dev-services[AMQP Dev Services Guide』]を参照してください。"
+msgstr "AMQP Dev Serviceは、アプリケーションに `quarkus-smallrye-reactive-messaging-amqp` エクステンションが存在し、ブローカー・アドレスが明示的に構成されていない場合に有効になります。詳細は、 link:amqp-dev-services[AMQP Dev Services Guide] を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/dev-services.adoc:32
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Apicurio Registry"
-msgstr "アピクリオレジストリ"
+msgstr "Apicurio Registry"
 
 #. type: Plain text
 #: upstream/_guides/dev-services.adoc:37
-#, fuzzy
 msgid "The Apicurio Dev Service will be enabled when the `quarkus-apicurio-registry-avro` extension is present in your application, and it's address has not been explicitly configured. More information can be found at the link:apicurio-registry-dev-services[Apicurio Registry Dev Services Guide]."
-msgstr "Apicurio Dev Serviceは、アプリケーションに `quarkus-apicurio-registry-avro` 拡張機能が存在し、そのアドレスが明示的に設定されていない場合に有効になります。詳細は、 link:apicurio-registry-dev-services[Apicurio Registry Dev Services Guide]を参照してください。"
+msgstr "Apicurio Dev Serviceは、アプリケーションに `quarkus-apicurio-registry-avro` エクステンションが存在し、そのアドレスが明示的に設定されていない場合に有効になります。詳細は、 link:apicurio-registry-dev-services[Apicurio Registry Dev Services Guide]を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/dev-services.adoc:40
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Databases"
 msgstr "データベース"
 
 #. type: Plain text
 #: upstream/_guides/dev-services.adoc:45
-#, fuzzy
 msgid "The database Dev Services will be enabled when a reactive or JDBC datasource extension is present in the application, and the database URL has not been configured. More information can be found at the link:datasource#dev-services[Datasource Guide]."
-msgstr "データベース Dev Services は、アプリケーションにリアクティブ・データソースまたは JDBC データソース拡張が存在し、データベースの URL が構成されていない場合に有効になります。詳細については、 link:datasource#dev-services[「データソース・ガイド」]を参照してください。"
+msgstr "データベース Dev Services は、アプリケーションにリアクティブ・データソースまたは JDBC データソースエクステンションが存在し、データベースの URL が構成されていない場合に有効になります。詳細については、 link:datasource#dev-services[データソース・ガイド]を参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/dev-services.adoc:48
-#, fuzzy
 msgid "Quarkus provides Dev Services for all databases it supports except Oracle. Most of these are run in a container, with the exception of H2 and Derby which are run in process. Dev Services are supported for both JDBC and reactive drivers."
-msgstr "Quarkusは、Oracleを除くサポートしているすべてのデータベースに対して開発サービスを提供しています。これらのデータベースのほとんどはコンテナ内で実行されますが、H2とDerbyはプロセス内で実行されます。開発サービスは、JDBCドライバとリアクティブドライバの両方をサポートしています。"
+msgstr "Quarkusは、Oracleを除くサポートしているすべてのデータベースに対してDev Servicesを提供しています。これらのデータベースのほとんどはコンテナ内で実行されますが、H2とDerbyはプロセス内で実行されます。開発サービスは、JDBCドライバとリアクティブドライバの両方をサポートしています。"
 
 #. type: Title ==
 #: upstream/_guides/dev-services.adoc:51
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Kafka"
-msgstr "カフカ"
+msgstr "Kafka"
 
 #. type: Plain text
 #: upstream/_guides/dev-services.adoc:56
-#, fuzzy
 msgid "The Kafka Dev Service will be enabled when the `quarkus-kafka-client` extension is present in your application, and the broker address has not been explicitly configured. More information can be found at the link:kafka-dev-services[Kafka Dev Services Guide]."
-msgstr "Kafka Dev Serviceは、アプリケーションに `quarkus-kafka-client` 拡張機能が存在し、ブローカー・アドレスが明示的に設定されていない場合に有効になります。詳細については、 link:kafka-dev-services[『Kafka Dev Services Guide』]を参照してください。"
+msgstr "Kafka Dev Serviceは、アプリケーションに `quarkus-kafka-client` エクステンションが存在し、ブローカー・アドレスが明示的に設定されていない場合に有効になります。詳細については、 link:kafka-dev-services[Kafka Dev Services Guide]を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/dev-services.adoc:59
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Keycloak"
-msgstr "キークローク"
+msgstr "Keycloak"
 
 #. type: Plain text
 #: upstream/_guides/dev-services.adoc:64
-#, fuzzy
 msgid "The Keycloak Dev Service will be enabled when the `quarkus-oidc` extension is present in your application, and the server address has not been explicitly configured. More information can be found at the link:security-openid-connect-dev-services[OIDC Dev Services Guide]."
-msgstr "Keycloak Dev Serviceは、アプリケーションに `quarkus-oidc` 拡張機能が存在し、サーバ・アドレスが明示的に設定されていない場合に有効になります。詳細は， link:security-openid-connect-dev-services[OIDC Dev Services Guide]を参照してください。"
+msgstr "Keycloak Dev Serviceは、アプリケーションに `quarkus-oidc` エクステンションが存在し、サーバ・アドレスが明示的に設定されていない場合に有効になります。詳細は， link:security-openid-connect-dev-services[OIDC Dev Services Guide]を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/dev-services.adoc:68
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "MongoDB"
 msgstr "MongoDB"
 
 #. type: Plain text
 #: upstream/_guides/dev-services.adoc:73
-#, fuzzy
 msgid "The MongoDB Dev Service will be enabled when the `quarkus-mongodb-client` extension is present in your application, and the server address has not been explicitly configured. More information can be found at the link:mongodb#dev-services[MongoDB Guide]."
-msgstr "MongoDB Dev Serviceが有効になるのは、アプリケーションに `quarkus-mongodb-client` 拡張機能があり、サーバーアドレスが明示的に設定されていない場合です。詳細は link:mongodb#dev-services[MongoDB ガイド]を参照してください。"
+msgstr "MongoDB Dev Serviceが有効になるのは、アプリケーションに `quarkus-mongodb-client` エクステンションがあり、サーバーアドレスが明示的に設定されていない場合です。詳細は link:mongodb#dev-services[MongoDB ガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/dev-services.adoc:76
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Redis"
 msgstr "Redis"
 
 #. type: Plain text
 #: upstream/_guides/dev-services.adoc:81
-#, fuzzy
 msgid "The Redis Dev Service will be enabled when the `quarkus-redis-client` extension is present in your application, and the server address has not been explicitly configured. More information can be found at the link:redis-dev-services[Redis Dev Services Guide]."
-msgstr "Redis Dev Serviceは、アプリケーションに `quarkus-redis-client` 拡張機能が存在し、サーバー・アドレスが明示的に設定されていない場合に有効になります。詳細は、 link:redis-dev-services[「Redis Dev Services Guide」]をご覧ください。"
+msgstr "Redis Dev Serviceは、アプリケーションに `quarkus-redis-client` エクステンションが存在し、サーバー・アドレスが明示的に設定されていない場合に有効になります。詳細は、 link:redis-dev-services[Redis Dev Services Guide]をご覧ください。"
 
 #. type: Title ==
 #: upstream/_guides/dev-services.adoc:84
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Vault"
-msgstr "ヴォールト"
+msgstr "Vault"
 
 #. type: Plain text
 #: upstream/_guides/dev-services.adoc:89
-#, fuzzy
 msgid "The Vault Dev Service will be enabled when the `quarkus-vault` extension is present in your application, and the server address has not been explicitly configured. More information can be found at the link:vault#dev-services[Vault Guide]."
-msgstr "Vault Dev Service は、アプリケーションに `quarkus-vault` 拡張機能が存在し、サーバー アドレスが明示的に設定されていない場合に有効になります。詳細については、 link:vault#dev-services[Vaultガイド]を参照してください。"
+msgstr "Vault Dev Service は、アプリケーションに `quarkus-vault` エクステンションが存在し、サーバー アドレスが明示的に設定されていない場合に有効になります。詳細については、 link:vault#dev-services[Vaultガイド]を参照してください。"
