Translate redis-dev-services.adoc.po

--- a/l10n/po/ja_JP/_guides/redis-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/redis-dev-services.adoc.po
@@ -3,7 +3,6 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
@@ -15,66 +14,60 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/redis-dev-services.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Dev Services for Redis"
-msgstr "Redisの開発サービス"
+msgstr "Dev Services for Redis"
 
 #. type: Plain text
 #: upstream/_guides/redis-dev-services.adoc:14
-#, fuzzy
 msgid "Quarkus supports a feature called Dev Services that allows you to create various datasources without any config.  What that means practically, is that if you have docker running and have not configured `quarkus.redis.hosts`, Quarkus will automatically start a Redis container when running tests or dev-mode, and automatically configure the connection."
 msgstr "QuarkusはDev Servicesと呼ばれる機能をサポートしており、設定なしで様々なデータソースを作成することができます。これは実際には、dockerを実行していて、 `quarkus.redis.hosts` を設定していない場合、Quarkusはテストやdev-modeの実行時に自動的にRedisコンテナを起動し、自動的に接続を設定します。"
 
 #. type: Plain text
 #: upstream/_guides/redis-dev-services.adoc:16
-#, fuzzy
 msgid "Available properties to customize the Redis DevService."
-msgstr "Redis DevServiceをカスタマイズするために利用できるプロパティです。"
+msgstr "Redis DevServiceをカスタマイズするために利用可能なプロパティ."
 
 #. type: Plain text
 #: upstream/_guides/redis-dev-services.adoc:22
-#, fuzzy
 msgid "When running the production version of the application, the Redis connection need to be configured as normal, so if you want to include a production database config in your `application.properties` and continue to use Dev Services we recommend that you use the `%prod.` profile to define your Redis settings."
-msgstr "そのため、本番用のデータベース設定を `application.properties` に含め、引き続き Dev Services を使用したい場合は、 `%prod.` プロファイルを使用して Redis 設定を定義することをお勧めします。"
+msgstr "アプリケーションの本番バージョンを実行するときは、Redis接続を通常どおりに構成する必要があるため、本番データベースの構成を `application.properties` に含めて、引き続きDev Servicesを使用する場合は、`％ prod.` プロファイルを使用してRedis設定を定義することをお勧めします。"
 
 #. type: Plain text
 #: upstream/_guides/redis-dev-services.adoc:25
-#, fuzzy
 msgid "Dev Services for Redis relies on Docker to start the server.  If your environment does not support Docker, you will need to start the server manually, or connect to an already running server."
 msgstr "Dev Services for Redisは、Dockerに依存してサーバーを起動します。お使いの環境がDockerをサポートしていない場合は、手動でサーバーを起動するか、すでに稼働しているサーバーに接続する必要があります。"
 
 #. type: Title ==
 #: upstream/_guides/redis-dev-services.adoc:26
-#, fuzzy, no-wrap
 msgid "Shared server"
 msgstr "共有サーバー"
 
 #. type: Plain text
 #: upstream/_guides/redis-dev-services.adoc:30
-#, fuzzy
 msgid "Most of the time you need to share the server between applications.  Dev Services for Redis implements a _service discovery_ mechanism for your multiple Quarkus applications running in _dev_ mode to share a single server."
-msgstr "ほとんどの場合、アプリケーション間でサーバーを共有する必要があります。Dev Services for Redisは、 _開発_モードで動作する複数のQuarkusアプリケーションが1つのサーバーを共有するための _サービス発見_メカニズムを実装しています。"
+msgstr "ほとんどの場合、アプリケーション間でサーバーを共有する必要があります。Dev Services for Redisは、 _開発_ モードで動作する複数のQuarkusアプリケーションが1つのサーバーを共有するための _サービスディスカバリ_ メカニズムを実装しています。"
 
 #. type: Plain text
 #: upstream/_guides/redis-dev-services.adoc:32
-#, fuzzy
 msgid "Dev Services for Redis starts the container with the `quarkus-dev-service-redis` label which is used to identify the container."
 msgstr "Dev Services for Redis は、コンテナを識別するために使用される `quarkus-dev-service-redis` ラベルでコンテナを起動します。"
 
 #. type: Plain text
 #: upstream/_guides/redis-dev-services.adoc:36
-#, fuzzy
 msgid "If you need multiple (shared) servers, you can configure the `quarkus.redis.devservices.service-name` attribute and indicate the server name.  It looks for a container with the same value, or starts a new one if none can be found.  The default service name is `redis`."
 msgstr "複数の（共有）サーバーが必要な場合は、 `quarkus.redis.devservices.service-name` 属性を設定し、サーバー名を示します。同じ値を持つコンテナを探し、見つからない場合は新しいコンテナを開始します。デフォルトのサービス名は `redis` です。"
 
 #. type: Plain text
 #: upstream/_guides/redis-dev-services.adoc:38
-#, fuzzy
 msgid "Sharing is enabled by default in dev mode, but disabled in test mode.  You can disable the sharing with `quarkus.redis.devservices.shared=false`."
-msgstr "共有は、devモードではデフォルトで有効ですが、testモードでは無効です。共有を無効にするには、 `quarkus.redis.devservices.shared=false`."
+msgstr "共有は、devモードではデフォルトで有効ですが、testモードでは無効です。 `quarkus.redis.devservices.shared=false` で共有を無効にすることが可能です。"
